# grep-in-rust

./: Cargo.toml
src/: main.rs
tests/: cli.rs
