[package]
name = "grrs"
version = "0.1.0"
authors = ["Taras Yermolenko <t.yermolenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0.4"
tempfile = { version = "3.1.0" }

[dependencies]
structopt = { version = "0.3" }